added put and delete

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -7,6 +7,27 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- <link href="https://use.fontawesome.com/release/v5.8.2/css/all.css" rel="stylesheet"/> -->
+    <script>
+        function done(todoTag){
+            const _id = todoTag.getAttribute("data-todoId");
+            console.log(_id);
+            fetch('/',{
+                method: 'PUT',
+                body: JSON.stringify({id: _id})
+            })
+            .then((response) => response.json())
+            .then((result) => {
+                console.log('Success:', result);
+            })
+            .catch((error) => {
+                console.log('Error:', error);
+            });
+        }
+        function deleteItem(todoTag){
+            const id = todoTag.getAttribute("data-todoId");
+            console.log(id);
+        }
+    </script>
 
 </head>
 <body>
@@ -22,19 +43,19 @@
                 </button>
             </form>
             <ul class="todo-list">
-                <li class="todo-list-item">
-                    <div class="todo-list-item-name">
-                        First task
-                    </div>
-                    <a href="" class="edit">
-                        Edit
-                        <i class="fa fa-pencil"></i>
-                    </a>
-                    <a href="" class="remove">
-                        Remove
-                        <i class="fa fa-times"></i>
-                    </a>
-                </li>
+                <% todoList.forEach(function(todo){ %>
+                    <li class="todo-list-item">
+                        <div class="todo-list-item-name">
+                            <%= todo.todo %>
+                        </div>
+                        <button data-todoId="<%= todo._id %>" class="edit" onClick="done(this)">
+                            <i class="fa fa-pencil"></i>
+                        </button>
+                        <button data-todoId="<%= todo._id %>" class="remove" onClick="deleteItem(this)">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </li>
+                <% }) %>
             </ul>
         </div>
     </div>
