--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -83,3 +83,7 @@ body{
     cursor: pointer;
     text-decoration: none;
 }
+
+.todo-list-item .strike-through{
+    text-decoration: line-through;
+}
