--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -10,7 +10,7 @@
     <script>
         function done(todoTag){
             const _id = todoTag.getAttribute("data-todoId");
-            fetch('/',{
+            fetch('/done',{
                 method: 'PUT',
                 body: JSON.stringify({id: `${_id}`}),
                 headers: {
@@ -23,7 +23,7 @@
         }
         function deleteItem(todoTag){
             const _id = todoTag.getAttribute("data-todoId");
-            fetch(`/${_id}`, {
+            fetch(`/delete/${_id}`, {
                 method: 'DELETE',
                 headers: {
                     "Content-Type": "application/json",
@@ -37,12 +37,17 @@
 
 </head>
 <body>
+    
     <div class="todo-container">
+        <h2>
+            <%= comicData.safe_title %>
+        </h2>
+        <img src="<%= comicData.img %>" alt="<%= comicData.alt %>" width="40%" height="40%"/>
         <h2>
             To-Do Items
         </h2>
         <div class="todo">
-            <form action="/" method="POST" class="todo-header">
+            <form action="/create" method="POST" class="todo-header">
                 <input type="text" name="content" />
                 <button type="submit">
                     <i class="fa fa-plus"></i>
